# ai_agent_instruction_control_plane

./: README.md  engineering_knowledge_base  package-lock.json
.github/agent_instructions/: README.md
.github/agent_instructions/global/: README.md  artifact-formatting-preferences.md  prompt-instruction-log.md  python.md
.github/skills/: README.md
.github/skills/shape-readme-entrypoint/: SKILL.md
docs/: ai_human_workflow_template.md  future-product-philosophy-tool-integration.md  periodic_learning_retrieval_system.md  workflow_derived_retrieval_for_ai_assisted_development.md
docs/diagrams/ai-knowledge-promotion/: README.md  architecture-diagram-update-brief-template.md  full-diagram.excalidraw
docs/migrations/: folder-structure-visualizer-relocation.md
engineering_knowledge_base/: README.md
engineering_knowledge_base/coding_drills/: README.md
engineering_knowledge_base/incident_reports/: README.md
engineering_knowledge_base/personal_learning_notes/: README.md
tools/folder_structure_visualizer/: .gitignore  README.md  project-prompt.md  pyproject.toml
tools/folder_structure_visualizer/examples/: annotations.json  sample_structure.md  sample_structure.mmd
tools/folder_structure_visualizer/src/folder_structure_visualizer/: __init__.py  cli.py  models.py  render_html.py  render_image.py  render_markdown.py  render_mermaid.py  render_tree.py  scanner.py
tools/folder_structure_visualizer/tests/: test_cli.py  test_render_markdown.py  test_render_mermaid.py  test_render_tree.py  test_scanner.py
(+19 files in other folders)
