[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "folder_structure_visualizer"
version = "0.1.0"
description = "Generate text, Markdown, Mermaid, and optional image maps of local folder structures."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Julian Buccat" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
folderviz = "folder_structure_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
